--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -62,13 +62,269 @@
 <%= hr() %>
 
 <% if @orden.tipo == "N" %>
-<div class="button">
+
   
-<%= link_to( 'Add item',new_orden_orden_product_path(@orden),
-'data-popup' => true,
-:class => "button_class",
-:onclick=>"window.open(this.href,'Add Item', 'height=500, width=800');
-return false;") %>  <br>
+
+ 
+   <div class="form-inputs">
+    
+    
+   <table>
+      <tr>
+        <th>Programa/elemento</th>
+        <th>01</th>
+        <th>02</th>
+        <th>03</th>
+        <th>04</th>
+        <th>05</th>
+        <th>06</th>        
+        <th>07</th>
+        <th>08</th>        
+        <th>09</th>
+        <th>10</th>        
+        <th>11</th>
+        <th>12</th>
+        <th>13</th>
+        <th>14</th>        
+        <th>15</th>
+        <th>16</th>
+        <th>17</th>
+        <th>18</th>
+        <th>19</th>
+        <th>20</th>
+        <th>21</th>
+        <th>22</th>        
+        <th>23</th>
+        <th>24</th>        
+        <th>25</th>
+        <th>26</th>        
+        <th>27</th>
+        <th>28</th>
+        <th>29</th>
+        <th>30</th>        
+        <th>31</th>        
+        <th>Cantidad</th>
+        <th>Tarifa</th>
+        <th>Costo</th>
+        <th>Total</th>
+      </tr>
+    <tr>
+      <td>   
+        <div >
+        <input type="hidden" name="ac_item_id" id="ac_item_id" value="<% if @ac_item_id %><%= @ac_item_id %><% end %>"/>
+        <input type="text" name="ac_item" id="ac_item" value="<% if @ac_item %><%= @ac_item %><% end %>"  />
+        </div>
+      </td>
+      
+      <td>        
+        <div class="field">
+          <input type="number" name="d01"  style=" width: 25px" min="1" max="99" > 
+        </div>
+      </td>
+          
+      <td>
+        <div class="field">
+          <input type="number" name="d02"  style=" width: 25px" min="1" max="99" >
+        </div>
+      </td>
+      
+      <td>
+          <div class="field">
+            <input type="number" name="d03"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+          <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>        
+        <div class="field">
+          <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>
+        <div class="field">
+          <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>        
+        <div class="field">
+          <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>        
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          
+          </div>
+      </td>
+      <td>        
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>        
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>        
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>        
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+
+
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <input type="number" name="d04"  style=" width: 25px" min="1" max="99" >
+          </div>
+      </td>
+      <td>
+        <div class="small">
+        <input type="number" name="quantity"  style=" width: 25px" min="1" max="99" >
+        </div>    
+      </td>    
+      
+      <td>
+        <div class="field">
+          <input type="number" name="tarifa"  style=" width: 25px" min="1" max="99" >
+          </div>
+        
+      </td>
+      
+      <td>
+        <div class="small">
+          <input type="number" name="price"  style=" width: 25px" min="1" max="99" >
+        </div>    
+      </td>    
+      <td>
+        <div>
+          <input type="number" name="total"  style=" width: 25px" min="1" max="99" >
+        </div>
+      </td>
+    </tr>
+  
+      </table>
+  </div>
+
+<div class="button">
+
+<%= link_to( 'Add item',new_orden_orden_product_path(@orden)  %>  <br>
 
 
 </div> 
