--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -213,7 +213,7 @@
           </td>
 
           <td class="small bordered_bottom bordered_right">
-            <%= product.avisodetail.descrip %>    
+            <%= product.descrip  %>    
           </td>
           
           <td class="small bordered_bottom bordered_right">
