--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -53,7 +53,7 @@
     <div class="field">
       <%= f.label :secu_cont %><br />
       
-    <%=  f.collection_select(:secu_cont, @contratos2, :id,:name , size: @contratos2.size) %>
+    <%=  f.collection_select(:secu_cont, @contratos2, :secu_cont,:name , size: @contratos2.size) %>
        
     </div>
     <div class="field">
