--- a/app/views/customer_contratos/_form.html.erb
+++ b/app/views/customer_contratos/_form.html.erb
@@ -41,7 +41,7 @@
     </div>
     <div class="field"> 
       <%= f.label :moneda_id %><br />
-      <%= f.select :moneda_id,options_from_collection_for_select(@monedas,'id','description') %>
+      <%= f.collection_select :moneda_id, @monedas, :id, :description, :prompt => true %>
 
     </div>
 
