--- a/app/views/customer_contratos/_form.html.erb
+++ b/app/views/customer_contratos/_form.html.erb
@@ -50,9 +50,7 @@
       <%= f.text_field :secu_cont  %>
     </div>
 
-
-
-  <div class="form-actions">
+  <div class="button">
     <%= f.button :submit %>
   </div>
 
