--- a/app/views/facturas/list_invoices.html.erb
+++ b/app/views/facturas/list_invoices.html.erb
@@ -30,7 +30,7 @@
 <div class="button">
   <%= link_to 'Factura Contratos', "/facturas/new/#{@company.id}" %>  
   
-  <%= link_to "Factura Servicios", "/facturas/newfactura2/#{@company.id}" %>
+  <%= link_to "Factura Servicios", "/facturas/new2/#{@company.id}" %>
 
 
 </div>
