--- a/app/views/ordens/_list.html.erb
+++ b/app/views/ordens/_list.html.erb
@@ -48,7 +48,8 @@
             <%= link_to "Editar", edit_orden_path(orden) %>
           </td>
           <td class="bordered_right bordered_bottom">
-            <%= link_to 'Eliminar',:data=> {:confirm => 'Esta seguro ?'}, :method => :delete %>
+            <%= link_to 'Eliminar',orden ,  :confirm => 'Esta seguro ?', :method => :delete %>
+
           </td>
         </tr>
       <% end %>
