--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -79,7 +79,8 @@
     
     <div class="field">
       <%= f.label :moneda_id %><br />
-      <%= f.select :moneda_id,options_from_collection_for_select(@monedas,'id','description') %>
+      <%= f.collection_select :version_id, @monedas, :id, :description ,{:prompt   => "Selec una version"}
+      
     </div>
     
       
