--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -79,8 +79,8 @@
     
     <div class="field">
       <%= f.label :moneda_id %><br />
-      <%= f.collection_select :version_id, @monedas, :id, :description ,{:prompt   => "Selec una version"}
-      
+      <%= f.collection_select :moneda_id, @monedas, :id, :description ,{:prompt   => "Selec una version"} %>
+
     </div>
     
       
