--- a/app/views/ordens/_list.html.erb
+++ b/app/views/ordens/_list.html.erb
@@ -37,7 +37,7 @@
             <%= link_to orden.customer.name, orden.customer, :title => "Go to customer" %>
           </td>
           <td class="bordered_right bordered_bottom">
-            <%= orden.get_moneda(orden.id) %>
+            <%= orden.get_moneda(orden.moneda_id) %>
           </td>
           
 
