--- a/app/views/facturas/show.html.erb
+++ b/app/views/facturas/show.html.erb
@@ -68,7 +68,7 @@
 
         <p>
           <b>Cliente :</b>
-          <%= link_to @factura.customer.name , @factura.customer.code %>
+          <%= link_to @factura.customer.name , @factura.customer.ruc %>
         </p>
            <p>
         <strong>Medio :</strong>
