--- a/app/views/facturas/show.html.erb
+++ b/app/views/facturas/show.html.erb
@@ -119,7 +119,7 @@
   <tbody>
     <%  @factura_details.each do |quote| %>
 
-    <% if @lcTipoFactura == '1' %>
+    <% if @factura.tc == '1' %>
 
           <tr>
             <td class="bordered_bottom bordered_right">
