--- a/app/views/facturas/list_items.html.erb
+++ b/app/views/facturas/list_items.html.erb
@@ -23,6 +23,12 @@
         </th>
       </tr>
     </thead>
+      <% total_general = 0%>
+     
+      <% total_1 = 0%>
+      <% total_2 = 0%>
+      <% total_3 = 0%>
+
     <tbody>
       <% for product in @products %>
         <tr>
@@ -46,10 +52,14 @@
         </tr>
       <% end %>
 
+       <% total_1 = total_general %>
+        
+      
+      <% total_3 = total_1 / 1.18 %>
+      <% total_2 = total_1 - total_3 %>
+      
 
-      <% total_1 = 0%>
-      <% total_2 = 0%>
-      <% total_3 = 0%>
+     
       
     </tbody>
 
@@ -87,14 +97,7 @@
             <%= money(total_2) %>
           </td>
         </tr>
-      <% total_1 += product.currtotal %>
-        
-      <% end %>
-      
-      <% total_3 = total_1 / 1.18 %>
-      <% total_2 = total_1 - total_3 %>
-      
-
+    
           <td >
           </td>
           
