--- a/app/views/facturas/_list.html.erb
+++ b/app/views/facturas/_list.html.erb
@@ -6,10 +6,17 @@
           Factura
         </th>
         <th class="bordered_right bordered_bottom" style="width: 350px;">
+          Facturado 
+        </th>
+        
+        <th class="bordered_right bordered_bottom" style="width: 350px;">
           Cliente
         </th>
         <th class="bordered_right bordered_bottom" style="width: 100px;">
           Contrato 
+        </th>
+        <th class="bordered_right bordered_bottom">
+          Moneda
         </th>
         
         <th class="bordered_right bordered_bottom">
@@ -34,9 +41,25 @@
             <%= link_to invoice.code, invoice, :title => "Ir a factura" %>
           </td>
           <td class="bordered_right bordered_bottom">
+            <% if invoice.tc == "1"%> 
+              <%= invoice.contrato.medio.name %>
+            <% else %>
+              <%= invoice.medio.name %>
+            <%end %>
+
+          </td>   
+          <td class="bordered_right bordered_bottom">
+
+          <% if invoice.tc == "1"%> 
           <%if invoice.contrato != nil %>
-          <%= invoice.contrato.customer.name %>
+              <%= invoice.contrato.customer.name %>
           <% end %>
+          <% else %>
+
+              <%= invoice.customer.name %>
+
+          <%end %>
+
           </td>
           
           <td class="bordered_right bordered_bottom">
@@ -44,6 +67,10 @@
             <%= invoice.contrato.code %>
             <% end %>
           </td>
+          <td class="bordered_right bordered_bottom">
+            <%= invoice.moneda.symbol %>  
+          </td>
+
           <td class="bordered_right bordered_bottom right">
             <%= money(invoice.total) %>
           </td>
