--- a/app/views/facturas/_list.html.erb
+++ b/app/views/facturas/_list.html.erb
@@ -44,7 +44,7 @@
             <% if invoice.tc == "1"%> 
               <%= invoice.contrato.medio.name %>
             <% else %>
-              <%= invoice.medio.name %>
+              <%= invoice.medio.descrip %>
             <%end %>
 
           </td>   
