--- a/app/views/reports/rpt_cpagar1_all.html.erb
+++ b/app/views/reports/rpt_cpagar1_all.html.erb
@@ -20,19 +20,23 @@ totals = []
  Reporte de cuentas proveedores - <%= @month_name %> <%= @year %>
 </h3	>
 
-<form method="get" action="/supplier_payments/rpt_purchases_all/<%= @company.id %>">
 
-   	<div class="field">
-      <input type="date" name="fecha1" value="2019-04-15" style = "width: 150px" >
+  <%= form_tag(rpt_compras_01_supplier_payments_path, :method => "get") do %>
 
-    </div>
-	<div class="field">
-		<input type="date" name="fecha2" value="2019-04-15" style = "width: 150px" >
+  <div class="field">
+    Desde <input type="date" name="fecha1" value="2019-08-01" style = "width: 150px" >
   </div>
 
-  <input type="submit" value="Generar Reporte"  />
+  <div class="field">
+    Hasta <input type="date" name="fecha2" value="2019-08-30" style = "width: 150px" >
+  </div>
   
-</form>
+  
 
+  <%= submit_tag  "PDF", :name => "print"    %>
+
+  <%= submit_tag "Excel", :name => "print" %>
+     
+<% end %>
 <br />
 
