--- a/app/views/supplier_payments/rpt_compras_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_compras_01.pdf.erb
@@ -234,7 +234,7 @@
                       <tr>
                       <td width="8%"> </td>
                       <td width="8%">  </td>
-                      <td width="30%"> Total Dolares :</td>
+                      <td width="30%"> Total Soles  :</td>
                       <td width="10%" align="right"> </td>
                       <td width="5%" align="right"> </td>
             <td width="10%" align="right"> <%= sprintf("%.2f",totg1.to_s) %></td>
