--- a/app/views/supplier_payments/rpt_compras_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_compras_01.pdf.erb
@@ -114,7 +114,7 @@
 
      
                  <table style=  'font-size:80% ;width:100%'>       
-                      <tr>
+                      <tr style="font-weight:bold">
                       <td width="8%"> </td>
                       <td width="8%">  </td>
                       <td width="30%"> Total Dolares :</td>
@@ -231,7 +231,7 @@
 
      
                  <table style=  'font-size:80% ;width:100%'>       
-                      <tr>
+                      <tr style="font-weight:bold">
                       <td width="8%"> </td>
                       <td width="8%">  </td>
                       <td width="30%"> Total Soles  :</td>
