--- a/app/views/supplier_payments/show.html.erb
+++ b/app/views/supplier_payments/show.html.erb
@@ -95,7 +95,9 @@
   </thead>
   
 <div class="button">  
-<%= link_to 'Agregar Item', new_supplier_payment_supplierpayment_detail_path(@supplierpayment) %>  
+<%= link_to 'Agregar Documento', new_supplier_payment_supplierpayment_detail_path(@supplierpayment) %>
+<%= link_to 'Buscar Documento', new2_supplier_payment_supplierpayment_detail_path(@supplierpayment) 
+%>  
 </div> 
 
   <tbody>
