--- a/app/views/supplier_payments/ac_facturas.html.erb
+++ b/app/views/supplier_payments/ac_facturas.html.erb
@@ -1,5 +1,5 @@
 <% if @docs %>
   <% for purchase in @docs %>
-<%= purchase.documento %>|BRK|  <%= purchase.supplier_id %>|BRK|<%= purchase.id %>|BRK| <%= purchase.balance.round(2) %>|BRK| <%= purchase.name  %>
+<%= purchase.documento %>|BRK|  <%= purchase.supplier_id %>|BRK|<%= purchase.id %>|BRK| <%= purchase.balance.round(2) %>|BRK| <%= purchase.supplier.name  %>
   <% end %>
 <% end %>
